try1 fix instant padding on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
 html {
   font-size: 10px;
   font-family: 'Roboto', sans-serif;
-  scroll-behavior: smooth;
 }
 
 body {
